add introduction and fix read more button

--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
 <body>
 
     <nav id="navbar" class="navbar sticky-top navbar-light px-3">
-        <h1><a class="navbar-brand" href="#scrollspyHeading1">Ilham</a></h1>
+        <h1><a class="navbar-brand" href="#header">Ilham</a></h1>
         <ul class="nav nav-pills">
             <li class="nav-item">
-                <a class="nav-link" href="#scrollspyHeading2">Skills</a>
+                <a class="nav-link" href="#skill">Skills</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#scrollspyHeading3">Project</a>
+                <a class="nav-link" href="#project">Project</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#scrollspyHeading4">Contact</a>
+                <a class="nav-link" href="#contact">Contact</a>
             </li>
             <li>
         </ul>
     </nav>
 
-    <header class="p-3" id="scrollspyHeading1">
+    <header class="p-3" id="header">
         <div class="container slideme">
             <div class="row">
                 <div class="col-md-6 d-flex justify-content-center align-items-center pb-3">
@@ -39,15 +39,17 @@
                 <div class="col-md-6 slideme">
                     <h2>Hello, It's me</h2>
                     <p class="display-6"><b>MUHAMMAD ILHAM THAQIF BIN MANSOR</b></p>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus placeat ipsa vel, fugit
-                        quibusdam
-                        laborum delectus quia libero eveniet impedit fugiat dolore, optio praesentium voluptas earum
-                        assumenda laboriosam. In, deleniti.</p>
+                    <p>An Electric and Electronic engineering freshgraduate from Ungku Omar Polytechnic. That really
+                        like to make project that consist of electronic stuff and code. I've done alot of personal
+                        project and a few group project. Seeing a project done really drive me to make another project. 
+                        Even this portfolio is a personal project for me. I hope in the future I could make a project that can
+                        be comercialize and helpful to somebody.
+                    </p>
                 </div>
             </div>
         </div>
     </header>
-    <section class="skill p-3" id="scrollspyHeading2">
+    <section class="skill p-3" id="skill">
         <div class="container">
             <h2>My skillset</h2>
             <div class="row">
@@ -91,7 +93,7 @@
             </div>
         </div>
     </section>
-    <section class="projects py-3" id="scrollspyHeading3">
+    <section class="projects py-3" id="project">
         <div class="container">
             <h2>Projects that I contributes to</h2>
             <div class="row">
@@ -100,7 +102,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h3 class="display-6">Automatic location sending smoke detector</h3>
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                            <button type="button" class="btn btn-primary float-end" data-bs-toggle="modal"
                                 data-bs-target="#smokeDetector">
                                 Read more
                             </button>
@@ -112,7 +114,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h3 class="display-6">Flood detector alert using ESP8266</h3>
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                            <button type="button" class="btn btn-primary float-end" data-bs-toggle="modal"
                                 data-bs-target="#floodDetector">
                                 Read more
                             </button>
@@ -182,7 +184,7 @@
             </div>
         </div>
     </section>
-    <section class="skill p-3" id="scrollspyHeading4">
+    <section class="skill p-3" id="contact">
         <div class="container">
             <h2>Contact</h2>
             <div id="liveAlertPlaceholder"></div>
