--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         like to make project that consist of electronic stuff and code. I've done alot of personal
                         project and a few group project. Seeing a project done really drive me to make another project. 
                         Even this portfolio is a personal project for me. I hope in the future I could make a project that can
-                        be comercialize and helpful to somebody.
+                        be commercialize and helpful to somebody.
                     </p>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                         </div>
                         <div class="modal-body">
                             <h3>Introduction</h3>
-                            <p>This is one of my junior project. The perpose of this project is to help giving update
+                            <p>This is one of my junior project. The purpose of this project is to help giving update
                                 via twitter to high flood risk location so that they get to know how high the water
                                 level and they can take the next action. <b>PS in this project I only contribute to the
                                     code.</b></p>
